--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.8",
+    "vite-plugin-mkcert": "^1.17.5",
     "vitest": "^1.4.0"
   }
 }
